areglo de variable